--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Inicio</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Restructuración Empresas</a>
-          </li>
+         <!--<li class="nav-item">
+            <a class="nav-link active" href="#">Servicios</a>
+          </li>--> 
           <li class="nav-item">
             <a class="nav-link active" href="#">¿Quienes somos?</a>
           </li>
@@ -75,8 +75,8 @@
         <div class="carousel-item active">
           <!-- Etiqueta picture para cargar imagenes en funcion de la resolucion -->
           <picture>
-            <source media="(min-width:992px)" srcset="fotos/test.webp">
-            <img src="fotos/test-mb.webp" class="d-block w-100" alt="alt-pic">
+            <source media="(min-width:992px)" srcset="fotos/SOLUCION.png">
+            <img src="fotos/SOLUCION-MB.png" class="d-block w-100" alt="alt-pic">
           </picture>
           <div class="carousel-caption d-none d-md-block">
             <a href="#" class="btn btn-primary"> Más información </a>
@@ -84,7 +84,7 @@
         </div>
         <div class="carousel-item">
           <picture>
-            <source media="(min-width:992px)" srcset="fotos/test.webp">
+            <source media="(min-width:992px)" srcset="fotos/foto.png">
             <img src="fotos/test-mb.webp" class="d-block w-100" alt="alt-pic">
           </picture>
           <div class="carousel-caption d-none d-md-block">
