--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
         <div class="carousel-item">
           <picture>
-            <source media="(min-width:992px)" srcset="fotos/foto.png">
+            <source media="(min-width:992px)" srcset="fotos/slide2.png">
             <img src="fotos/test-mb.webp" class="d-block w-100" alt="alt-pic">
           </picture>
           <div class="carousel-caption d-none d-md-block">
@@ -98,7 +98,7 @@
         </div>
         <div class="carousel-item">
           <picture>
-            <source media="(min-width:992px)" srcset="fotos/test.webp">
+            <source media="(min-width:992px)" srcset="fotos/slide3.png">
             <img src="fotos/test-mb.webp" class="d-block w-100" alt="alt-pic">
           </picture>
           <div class="carousel-caption d-none d-md-block">
@@ -162,14 +162,14 @@
             <img class="icono" src="fotos/target (2).png" alt="">
             <h4 class="primera_linea">Conseguimos tus objetivos</h4>
             <p class="p_icono">
-              dsfgsdgsdfgsf
+              
             </p>
           </div>
           <div class="col-sm-4 somos1">
             <img class="icono" src="fotos/refresh-button (2).png" alt="">
             <h4 class="primera_linea">Estudiamos tu empresa 360º</h4>
             <p class="p_icono">
-              SGSKBGJSBGHSGSH
+            
           </div>
         </div>
       </div>
@@ -191,9 +191,9 @@
         </div>
         <div class="row g-0 d-flex align-items-center">
           <div class="col-12 col-lg-6 texto order-2 order-lg-1 mt-2 mt-lg-0">
-            <h2 class="titulo naranja derecha">Priorizamos la confianza y satisfaccion del cliente.</h2>
-            <p class="parrafo px-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic, nobis? Lorem ipsum
-              dolor sit amet consectetur adipisicing elit. Quaerat, perspiciatis.</p>
+            <h2 class="titulo naranja derecha">Aportando más de 30 años de experiencia  en el sector empresarial y bancario </h2>
+            <p class="parrafo px-4">La mejora de la rentabilidad y la liquidez en el corto plazo nos puede ofrecer una alta competitividad en el largo plazo. Ayudo a empresas como la tuya a mejorar sus resultados y ser más competitivas … 
+              ¿Te parece bien que trabajemos en equipo?    </p>
           </div>
 
           <div class="col-12 col-lg-6 thumb order-1 order-lg-2">
@@ -218,10 +218,9 @@
 
             <div class="cliente">
               <div class="foto_cliente"><img src="fotos/servicios (1).png" alt=""></div>
-              <p class="nombrecliente">Alonso Pulido - Ahumor</p>
-              <p class="negociocliente">Autónomo</p>
-              <p class="pnegocio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae neque vel doloribus
-                iste rem. Itaque?
+              <p class="nombrecliente">Alonso Pulido Martin</p>
+              <p class="negociocliente">Empresario, Formador, Escritor. Miembro de la Red Mundial de Conferencistas y  CEO de Ahumor Eventos Corporativos.</p>
+              <p class="pnegocio">"Antonio Villanueva es diferente ! No he visto nunca a nadie con tanta capacidad para optimizar, negociar y resolver problemas de forma tan creativa, sin duda su llegada a mi empresa ha sido un antes y un después, me ha hecho ahorrarme mucho tiempo y dinero. Cree profundamente en el Ganar/Ganar y a amplificado exponencialmente mi negocio a nivel de resultados y beneficios.    100% recomendado, de Confianza y encima buena persona!"
               </p>
 
             </div>
