--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   </header>
 
 
-   <!--CARRUSEL FOTOS DESPS NAV-->
+  <!--CARRUSEL FOTOS DESPS NAV-->
   <section class="main">
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
@@ -83,23 +83,23 @@
         <div class="carousel-item active">
           <!-- Etiqueta picture para cargar imagenes en funcion de la resolucion -->
           <picture>
-            <source media="(min-width:992px)" srcset="fotos/SOLUCION.png">
-            <img src="fotos/SOLUCION-MB.png" class="d-block w-100" alt="alt-pic">
+            <source media="(min-width:992px)" srcset="fotos/1.png">
+            <img src="fotos/1-mb.png" class="d-block w-100" alt="alt-pic">
           </picture>
           <div class="carousel-caption d-none d-md-block"></div>
         </div>
         <div class="carousel-item">
           <picture>
-            <source media="(min-width:992px)" srcset="fotos/slide2.png">
-            <img src="fotos/test-mb.webp" class="d-block w-100" alt="alt-pic">
+            <source media="(min-width:992px)" srcset="fotos/2.png">
+            <img src="fotos/2-mb.png" class="d-block w-100" alt="alt-pic">
           </picture>
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
         <div class="carousel-item">
           <picture>
-            <source media="(min-width:992px)" srcset="fotos/slide3.png">
-            <img src="fotos/test-mb.webp" class="d-block w-100" alt="alt-pic">
+            <source media="(min-width:992px)" srcset="fotos/3.png">
+            <img src="fotos/3-mb.png" class="d-block w-100" alt="alt-pic">
           </picture>
           <div class="carousel-caption d-none d-md-block">
           </div>
@@ -119,18 +119,20 @@
 
     <!-- MI PADRE ALGO SOBRE ÉL FOTOS CON TEXTO -->
     <section>
-      <div class="algoinfo container">
-        <div class="row">
-          <div class="col-12 col-lg-6" class="middle">
-            <div class="container-card">
-              <img src="fotos/ANTONIO1.jpeg" alt="Avatar" class="image d-block w-100" style="width:100%">
+      <div class="imagen_scroll">
+        <div class="algoinfo container">
+          <div class="row">
+            <div class="col-12 col-lg-6" class="middle">
+
+              <img src="fotos/aviso.png" alt="Avatar" class="image d-block w-100" style="width:100%">
               <div class="position-absolute bottom-0 start-0 end-0 mx-auto">
+
               </div>
             </div>
-          </div>
-          <div class="col-12 col-lg-6">
-            <div class="container-card">
-              <img src="fotos/Antonio2.jpeg" alt="Avatar" class="image d-block w-100" style="width:100%">
+            <div class="col-12 col-lg-6">
+
+              <img src="fotos/aviso (1).png" alt="Avatar" class="image d-block w-100" style="width:100%">
+
             </div>
           </div>
         </div>
@@ -144,27 +146,33 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h3 class="titulo">¿Qué podemos hacer por ti?</h3>
+            <h3 class="tituloservicio">Nuestro servicio es para ti si :</h3>
           </div>
+
         </div>
         <div class="row">
           <div class="col-sm-4 somos1">
 
             <img class="icono" src="fotos/diana (1).png" alt="">
-            <h4 class="primera_linea">Conseguimos tus objetivos</h4>
-            
+            <h4 class="primera_linea">Hay un problema y no encuentras la solución</h4>
+
 
 
           </div>
           <div class="col-sm-4 somos1">
-            <img class="icono" src="fotos/target (2).png" alt="">
-            <h4 class="primera_linea"> Te guiamos en todo momento</h4>
-            
+            <img class="icono" src="fotos/tomadedecisiones.png" alt="">
+            <h4 class="primera_linea">No hay problema pero algo no funciona bien.</h4>
+
           </div>
           <div class="col-sm-4 somos1">
-            <img class="icono" src="fotos/refresh-button (2).png" alt="">
-            <h4 class="primera_linea">Estudiamos tu empresa 360º</h4>           
+            <img class="icono" src="fotos/graficodebarras.png" alt="">
+            <h4 class="primera_linea">No hay problemas pero quieres mejorar tus resultados.</h4>
           </div>
+        </div>
+        <div class="frasesolucion">
+          <p>
+            Ofrecemos una solución específica, altamente personalizada , fácil y ágil.
+          </p>
         </div>
       </div>
 
@@ -176,7 +184,7 @@
             <img class="img-responsive" src="fotos/somos.jpg" alt="">
           </div>
           <div class="col-12 col-lg-6 texto mt-2 mt-lg-0">
-            <h2 class="titulo azul">Priorizamos la confianza y satisfaccion del cliente.</h2>
+            <h2 class="tituloazul">Priorizamos la confianza y satisfaccion del cliente.</h2>
             <p class="parrafo px-4">Nuestra propuesta de consultoría empresarial está centrada en ayudarte a organizar y
               gestionar tu
               negocio de tal manera que éste sea capaz de funcionar siempre bien y reportarte los mejores
@@ -185,9 +193,12 @@
         </div>
         <div class="row g-0 d-flex align-items-center">
           <div class="col-12 col-lg-6 texto order-2 order-lg-1 mt-2 mt-lg-0">
-            <h2 class="titulo naranja derecha">Aportando más de 30 años de experiencia  en el sector empresarial y bancario </h2>
-            <p class="parrafo px-4">La mejora de la rentabilidad y la liquidez en el corto plazo nos puede ofrecer una alta competitividad en el largo plazo. Ayudo a empresas como la tuya a mejorar sus resultados y ser más competitivas … 
-              ¿Te parece bien que trabajemos en equipo?    </p>
+            <pre><h2 class="tituloazul">Aportando más de 30 años de experiencia
+  en el sector empresarial y bancario </h2></pre>
+            <p class="parrafo px-4">La mejora de la rentabilidad y la liquidez en el corto plazo nos puede ofrecer una
+              alta competitividad en el largo plazo. Ayudo a empresas como la tuya a mejorar sus resultados y ser más
+              competitivas …
+              ¿Te parece bien que trabajemos en equipo? </p>
           </div>
 
           <div class="col-12 col-lg-6 thumb order-1 order-lg-2">
@@ -211,10 +222,15 @@
           <div class="cliente col-sm-4">
 
             <div class="cliente">
-              <div class="foto_cliente"><img src="fotos/servicios (1).png" alt=""></div>
+              <div class="foto_cliente"><img src="fotos/Alonso.jpeg" width="150" height="150" alt=""></div>
               <p class="nombrecliente">Alonso Pulido Martin</p>
-              <p class="negociocliente">Empresario, Formador, Escritor. Miembro de la Red Mundial de Conferencistas y  CEO de Ahumor Eventos Corporativos.</p>
-              <p class="pnegocio">"Antonio Villanueva es diferente ! No he visto nunca a nadie con tanta capacidad para optimizar, negociar y resolver problemas de forma tan creativa, sin duda su llegada a mi empresa ha sido un antes y un después, me ha hecho ahorrarme mucho tiempo y dinero. Cree profundamente en el Ganar/Ganar y a amplificado exponencialmente mi negocio a nivel de resultados y beneficios.    100% recomendado, de Confianza y encima buena persona!"
+              <p class="negociocliente">Empresario, Formador, Escritor. Miembro de la Red Mundial de Conferencistas y
+                CEO de Ahumor Eventos Corporativos.</p>
+              <p class="pnegocio">"Antonio Villanueva es diferente ! No he visto nunca a nadie con tanta capacidad para
+                optimizar, negociar y resolver problemas de forma tan creativa, sin duda su llegada a mi empresa ha sido
+                un antes y un después, me ha hecho ahorrarme mucho tiempo y dinero. Cree profundamente en el Ganar/Ganar
+                y a amplificado exponencialmente mi negocio a nivel de resultados y beneficios. 100% recomendado, de
+                Confianza y encima buena persona!"
               </p>
 
             </div>
@@ -223,11 +239,10 @@
           <div class="cliente col-sm-4">
 
             <div class="cliente">
-              <div class="foto_cliente"><img src="fotos/servicios (1).png" alt=""></div>
+              <div class="foto_cliente"><img src="fotos/Alonso.jpeg" width="150" height="150" alt=""></div>
               <p class="nombrecliente">Jose Lázaro</p>
               <p class="negociocliente">Empresa Farmacéutica</p>
-              <p class="pnegocio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae neque vel doloribus
-                iste rem. Itaque?
+              <p class="pnegocio">"Antonio Villanueva es diferente ! No he visto nunca a nadie con tanta capacidad para optimizar, negociar y resolver problemas de forma tan creativa, sin duda su llegada a mi empresa ha sido un antes y un después, me ha hecho ahorrarme mucho tiempo y dinero. Cree profundamente en el Ganar/Ganar y a amplificado exponencialmente mi negocio a nivel de resultados y beneficios. 100% recomendado, de Confianza y encima buena persona!"
               </p>
             </div>
 
@@ -235,11 +250,10 @@
           <div class="cliente col-sm-4">
 
             <div class="cliente">
-              <div class="foto_cliente"><img src="fotos/servicios (1).png" alt=""></div>
+              <div class="foto_cliente"><img class="fototestimonios" width="150" height="150" src="fotos/Alonso.jpeg" alt=""></div>
               <p class="nombrecliente"> Pago de Almaraes </p>
               <p class="negociocliente">Bodega</p>
-              <p class="pnegocio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae neque vel doloribus
-                iste rem. Itaque?
+              <p class="pnegocio">"Antonio Villanueva es diferente ! No he visto nunca a nadie con tanta capacidad para optimizar, negociar y resolver problemas de forma tan creativa, sin duda su llegada a mi empresa ha sido un antes y un después, me ha hecho ahorrarme mucho tiempo y dinero. Cree profundamente en el Ganar/Ganar y a amplificado exponencialmente mi negocio a nivel de resultados y beneficios. 100% recomendado, de Confianza y encima buena persona!"
               </p>
 
             </div>
@@ -346,7 +360,19 @@
       <div class="container">
         <div class="row">
           <div class="img-wrapper fotofinal">
-            <img src="fotos/TRANSPARENTE-ajustado.png" class="img-fluid" alt="">
+            <img src="fotos/TRANSPARENTE-ajustado.png" width="300" height="200" class="img-fluid" alt="">
+            <div>
+              <code >
+                <p>Todos los derechos reservados © Antonio Villanueva , 2023</p>
+                <p>E-mail: antonovillanueva@info.com</p>
+                <p class="footer">
+                  <a href="index.html">Inicio</a> |
+                  <a href="privacy-policy.html">Política de privacidad</a> |
+                  <a href="terms-conditions.html">Términos y condiciones</a> |
+                  <a href="contact.html">Contacto</a>
+                </p>
+              </footer></code>
+            </div>
           </div>
         </div>
       </div>
