--- a/index.html
+++ b/index.html
@@ -116,37 +116,23 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-
+<section class="foto_inicio">
+  <div>
+    <picture>
+      <source srcset="fotos/seremos750.png" media="(max-width: 992px)">
+      <img src="fotos/CABEZAAPAISADO.png" class="d-block w-100" height="800px" alt="My Image">
+    </picture>
+</div >
+</section>
     <!-- MI PADRE ALGO SOBRE ÉL FOTOS CON TEXTO -->
-    <section>
-      <div class="imagen_scroll">
-        <div class="algoinfo container">
-          <div class="row">
-            <div class="col-12 col-lg-6" class="middle">
-
-              <img src="fotos/aviso.png" alt="Avatar" class="image d-block w-100" style="width:100%">
-              <div class="position-absolute bottom-0 start-0 end-0 mx-auto">
-
-              </div>
-            </div>
-            <div class="col-12 col-lg-6">
-
-              <img src="fotos/aviso (1).png" alt="Avatar" class="image d-block w-100" style="width:100%">
-
-            </div>
-          </div>
-        </div>
-      </div>
-
-
-
-    </section>
+  
+    
 
     <section class="somos">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h3 class="tituloservicio">Nuestro servicio es para ti si :</h3>
+            <h3 class="tituloservicio">ADAPTARSE - ANTICIPARSE - DIFERENCIARSE </h3>
           </div>
 
         </div>
@@ -154,19 +140,30 @@
           <div class="col-sm-4 somos1">
 
             <img class="icono" src="fotos/diana (1).png" alt="">
-            <h4 class="primera_linea">Hay un problema y no encuentras la solución</h4>
+            <h4 class="primera_linea">Área específica</h4>
+            <pre>  Procesos, clientes, productos... 
+donde detectes que lo necesitas.</pre>
 
 
 
           </div>
           <div class="col-sm-4 somos1">
             <img class="icono" src="fotos/tomadedecisiones.png" alt="">
-            <h4 class="primera_linea">No hay problema pero algo no funciona bien.</h4>
+            <h4 class="primera_linea">Servicios</h4>
+            <pre>
+ Mentoría.
+Acompañamiento.
+Negociación.
+Optimización de costes.
+            </pre>
 
           </div>
           <div class="col-sm-4 somos1">
             <img class="icono" src="fotos/graficodebarras.png" alt="">
-            <h4 class="primera_linea">No hay problemas pero quieres mejorar tus resultados.</h4>
+            <h4 class="primera_linea">Impulsar tu negocio</h4>
+            <pre>Obtendrás una visión global
+para establecer 
+estrategias a corto-medio-largo plazo.</pre>
           </div>
         </div>
         <div class="frasesolucion">
@@ -181,7 +178,7 @@
       <div class="container-fluid px-0">
         <div class="row g-0 align-items-center">
           <div class="col-12 col-lg-6 thumb">
-            <img class="img-responsive" src="fotos/somos.jpg" alt="">
+            <img class="img-responsive" src="fotos/somos.png" alt="">
           </div>
           <div class="col-12 col-lg-6 texto mt-2 mt-lg-0">
             <h2 class="tituloazul">Priorizamos la confianza y satisfaccion del cliente.</h2>
@@ -202,12 +199,14 @@
           </div>
 
           <div class="col-12 col-lg-6 thumb order-1 order-lg-2">
-            <img class="img-responsive" src="fotos/somos2.jpg" alt="">
+            <img class="img-responsive" src="fotos/1como.png" alt="">
           </div>
         </div>
 
       </div>
     </section>
+
+  
 
     <section class="clientes">
       <div class="container">
@@ -222,7 +221,7 @@
           <div class="cliente col-sm-4">
 
             <div class="cliente">
-              <div class="foto_cliente"><img src="fotos/Alonso.jpeg" width="150" height="150" alt=""></div>
+              <div class="foto_cliente"><img src="fotos/Alonso.jpeg" width="160" height="160" alt=""></div>
               <p class="nombrecliente">Alonso Pulido Martin</p>
               <p class="negociocliente">Empresario, Formador, Escritor. Miembro de la Red Mundial de Conferencistas y
                 CEO de Ahumor Eventos Corporativos.</p>
@@ -239,10 +238,12 @@
           <div class="cliente col-sm-4">
 
             <div class="cliente">
-              <div class="foto_cliente"><img src="fotos/Alonso.jpeg" width="150" height="150" alt=""></div>
-              <p class="nombrecliente">Jose Lázaro</p>
-              <p class="negociocliente">Empresa Farmacéutica</p>
-              <p class="pnegocio">"Antonio Villanueva es diferente ! No he visto nunca a nadie con tanta capacidad para optimizar, negociar y resolver problemas de forma tan creativa, sin duda su llegada a mi empresa ha sido un antes y un después, me ha hecho ahorrarme mucho tiempo y dinero. Cree profundamente en el Ganar/Ganar y a amplificado exponencialmente mi negocio a nivel de resultados y beneficios. 100% recomendado, de Confianza y encima buena persona!"
+              <div class="foto_cliente"><img src="fotos/joseluis.jpeg" width="150" height="170" alt=""></div>
+              <p class="nombrecliente">José Luis Lázaro Rodríguez</p>
+              <pre class="negociocliente">Farmaceutico Titular de Farmacia EL Romeral
+
+              </pre>
+              <p class="pnegocio">"Necesitaba a un profesional que me ayudase a negociar un acuerdo un tanto complejo en la adquisición de un nuevo local para mi oficina de farmacia. Me puse en contacto con Antonio Villanueva y desde el primer momento me planteo nuevos enfoques que resultaron de gran utilidad para la consecución de un gran acuerdo donde ambas partes quedamos muy satisfechas con la labor realizada por Antonio como mediador, donde la competencia, la confianza y el trato humano recibido fueron los pilares básicos que remarcaría  y que me facilito enormemente el tránsito a esta nueva aventura."
               </p>
             </div>
 
@@ -250,10 +251,12 @@
           <div class="cliente col-sm-4">
 
             <div class="cliente">
-              <div class="foto_cliente"><img class="fototestimonios" width="150" height="150" src="fotos/Alonso.jpeg" alt=""></div>
-              <p class="nombrecliente"> Pago de Almaraes </p>
-              <p class="negociocliente">Bodega</p>
-              <p class="pnegocio">"Antonio Villanueva es diferente ! No he visto nunca a nadie con tanta capacidad para optimizar, negociar y resolver problemas de forma tan creativa, sin duda su llegada a mi empresa ha sido un antes y un después, me ha hecho ahorrarme mucho tiempo y dinero. Cree profundamente en el Ganar/Ganar y a amplificado exponencialmente mi negocio a nivel de resultados y beneficios. 100% recomendado, de Confianza y encima buena persona!"
+              <div class="foto_cliente"><img class="fototestimonios" width="150" height="170" src="fotos/Alonso.jpeg" alt=""></div>
+              <p class="nombrecliente"> Alejandro Martínez Girela </p>
+              <pre class="negociocliente">Director ejecutivo en Martinez Braojos Asesores
+
+              </pre>
+              <p class="pnegocio">"Me facilitaron el contacto de Antonio y en nuestro primer encuentro ya vimos la forma en la que me podía ayudar en la reestructuración de algunos clientes de mi cartera. He conseguido reubicar las condiciones comerciales que tenía con estos gracias al proceso de acompañamiento que me proporcionó y con unos resultados muy satisfactorios."
               </p>
 
             </div>
