--- a/index.html
+++ b/index.html
@@ -223,8 +223,9 @@ estrategias a corto-medio-largo plazo.</pre>
             <div class="cliente">
               <div class="foto_cliente"><img src="fotos/Alonso.jpeg" width="160" height="160" alt=""></div>
               <p class="nombrecliente">Alonso Pulido Martin</p>
-              <p class="negociocliente">Empresario, Formador, Escritor. Miembro de la Red Mundial de Conferencistas y
-                CEO de Ahumor Eventos Corporativos.</p>
+              <pre class="negociocliente">Empresario, Formador, Escritor. 
+Miembro de la Red Mundial de Conferencistas y 
+CEO de Ahumor Eventos Corporativos.</pre>
               <p class="pnegocio">"Antonio Villanueva es diferente ! No he visto nunca a nadie con tanta capacidad para
                 optimizar, negociar y resolver problemas de forma tan creativa, sin duda su llegada a mi empresa ha sido
                 un antes y un después, me ha hecho ahorrarme mucho tiempo y dinero. Cree profundamente en el Ganar/Ganar
@@ -251,7 +252,7 @@ estrategias a corto-medio-largo plazo.</pre>
           <div class="cliente col-sm-4">
 
             <div class="cliente">
-              <div class="foto_cliente"><img class="fototestimonios" width="150" height="170" src="fotos/Alonso.jpeg" alt=""></div>
+              <div class="foto_cliente"><img class="fototestimonios" width="160" height="160" src="fotos/alex.jpeg" alt=""></div>
               <p class="nombrecliente"> Alejandro Martínez Girela </p>
               <pre class="negociocliente">Director ejecutivo en Martinez Braojos Asesores
 
