--- a/index.html
+++ b/index.html
@@ -362,8 +362,8 @@ y largo plazo.</pre>
                 </div>
                 <p class="footer">
                   <a href="index.html">Inicio</a> |
-                  <a href="privacidad.pdf" target="_blank">Política de privacidad</a> |
-                  <a href="avisolegal1.pdf" target="_blank">Términos y condiciones</a> |
+                  <a href="privacidadfinal.pdf" target="_blank">Política de privacidad</a> |
+                  <a href="avisolegalFINAL.pdf" target="_blank">Términos y condiciones</a> |
                   <a href=#formulario>Contacto</a>
                 </p>
               </footer></code>
