--- a/index.html
+++ b/index.html
@@ -117,12 +117,15 @@
       </button>
     </div>
 <section class="foto_inicio">
-  <div>
-    <picture>
-      <source srcset="fotos/ACCION.png" media="(max-width: 992px)">
-      <img src="fotos/informacion.png" class="d-block w-100" height="800px" alt="My Image">
-    </picture>
-</div >
+
+<div>
+  <picture>
+    <source media="(min-width:992px)" srcset="fotos/informacion.png">
+    <img src="fotos/ACCION.png" class="d-block w-100" alt="alt-pic">
+  </picture>
+  <div class="carousel-caption d-none d-md-block">
+  </div>
+</div>
 </section>
     <!-- MI PADRE ALGO SOBRE ÉL FOTOS CON TEXTO -->
   
