--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>   
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/cookie-bar/cookiebar-latest.min.js?always=1"></script>
-  <title> Villanueva</title>
+  <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
+  <title> Villanueva - Consultor Estratégico</title>
 </head>
 
 <body>
-  <!-- cookies start -->
-
-<!-- cookies end -->
+  <div class="my-float">
+  <a href="https://api.whatsapp.com/send?phone=717121477" class="btn-wsp" target="_blank">
+    <i class="fa fa-whatsapp iconow"></i>
+</a>
+</div>
   <!-- HEADER -->
   <!-- BARRA DE NAVEGACIÓN -->
   <header>
@@ -29,7 +32,7 @@
     <nav class="navbar navbar-expand-lg bg-transparent menu">
       <div class="container-fluid">
         <div class="img-wrapper">
-          <img src="fotos/TRANSPARENTE-ajustado.png" class="img-fluid" alt="">
+          <img src="fotos/TRANSPARENTE-ajustado.png" class="img-fluid" id="copy" alt="">
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -84,14 +87,14 @@
           <!-- Etiqueta picture para cargar imagenes en funcion de la resolucion -->
           <picture>
             <source media="(min-width:992px)" srcset="fotos/1.png">
-            <img src="fotos/1-mb.png" class="d-block w-100" alt="alt-pic">
+            <img id="copy" src="fotos/1-mb.png" class="d-block w-100" alt="alt-pic">
           </picture>
           <div class="carousel-caption d-none d-md-block"></div>
         </div>
         <div class="carousel-item">
           <picture>
             <source media="(min-width:992px)" srcset="fotos/2.png">
-            <img src="fotos/2-mb.png" class="d-block w-100" alt="alt-pic">
+            <img id="copy" src="fotos/2-mb.png" class="d-block w-100" alt="alt-pic">
           </picture>
           <div class="carousel-caption d-none d-md-block">
           </div>
@@ -99,7 +102,7 @@
         <div class="carousel-item">
           <picture>
             <source media="(min-width:992px)" srcset="fotos/3.png">
-            <img src="fotos/3-mb.png" class="d-block w-100" alt="alt-pic">
+            <img id="copy" src="fotos/3-mb.png" class="d-block w-100" alt="alt-pic">
           </picture>
           <div class="carousel-caption d-none d-md-block">
           </div>
@@ -121,7 +124,7 @@
 <div>
   <picture>
     <source media="(min-width:992px)" srcset="fotos/informacion.png">
-    <img src="fotos/ACCION.png" class="d-block w-100" alt="alt-pic">
+    <img src="fotos/ACCION.png" class="d-block w-100" id="copy" alt="alt-pic">
   </picture>
   <div class="carousel-caption d-none d-md-block">
   </div>
@@ -222,7 +225,7 @@ y largo plazo.</pre>
               <p class="pnegocio">"Antonio Villanueva es diferente ! No he visto nunca a nadie con tanta capacidad para
                 optimizar, negociar y resolver problemas de forma tan creativa, sin duda su llegada a mi empresa ha sido
                 un antes y un después, me ha hecho ahorrarme mucho tiempo y dinero. Cree profundamente en el Ganar/Ganar
-                y a amplificado exponencialmente mi negocio a nivel de resultados y beneficios. 100% recomendado, de
+                y ha amplificado exponencialmente mi negocio a nivel de resultados y beneficios. 100% recomendado, de
                 Confianza y encima buena persona!"
               </p>
 
@@ -266,14 +269,14 @@ y largo plazo.</pre>
             <div class="container-form">
               <div id="formulario" class="info-form ">
                 <h2>Contáctanos</h2>
-                <p>Nos pondremos en conacto con usted lo antes posible, indiquenos su preferencia
+                <p>Nos pondremos en contacto con usted lo antes posible, indiquenos su preferencia
                   horaria en el formulario que tiene a continuación.</p>
                 <a href="#"><i class="fa fa-phone"></i> +34 717 121 477</a>
-                <a href="#"><i class="fa fa-envelope"></i> info@antonio-villanueva.com</a>
+                <a href="#"><i class="fa fa-envelope"></i>info@antonio-villanueva.com</a>
                 <a href="#"><i class="fa fa-map-marked"></i>Granada, España</a>
               </div>
               <div>
-                <img src="fotos/TRANSPARENTE.png" class="img-fluid" alt="">
+                <img id="copy" src="fotos/TRANSPARENTE.png" class="img-fluid" alt="">
               </div>
             </div>
           </div>
