--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ y largo plazo.</pre>
             <div class="row">
               <div class="col-md-12">
                 <div class="well well-sm">
-                  <form class="form-horizontal" method="post">
+                  <form class="form-horizontal" method="POST" action="https://formsubmit.co/info@antonio-villanueva.com">
                     <fieldset>
 
                       <div class="form-group">
