--- a/index.html
+++ b/index.html
@@ -342,6 +342,8 @@ y largo plazo.</pre>
                         </div>
                       </div>
                     </fieldset>
+                    <input type="hidden" name="_next" value="https://antonio-villanueva.com">
+                    <input type="hidden" name="_captcha" value="false">
                   </form>
                 </div>
               </div>
