obligatorio index.html

--- a/index.html
+++ b/index.html
@@ -363,6 +363,7 @@ y largo plazo.</pre>
               <code >
                 <p>Todos los derechos reservados © Antonio Villanueva , 2023</p>
                 <p>E-mail: info@antonio-villanueva.com</p>
+                <img src="fotos/obligatorio.png" width="300" height="200" class="img-fluid" alt="">
                 <div clas class="col-md-12 text-center">
                   <a href="http://www.linkedin.com/in/anantoniovillanuevaconsultor" target="_blank" class="btn">
                     <img src="fotos/linkedin.png" class="icon" width="50px">
